@@ -42,6 +42,7 @@ import org.apache.hadoop.mapreduce.Job;
 import org.apache.hadoop.mapreduce.OutputFormat;
 import org.apache.hadoop.mapreduce.RecordReader;
 import org.apache.hadoop.mapreduce.RecordWriter;
+import org.apache.hadoop.mapreduce.lib.input.FileSplit;
 import org.apache.hadoop.mapreduce.lib.input.FileInputFormat;
 import org.apache.hadoop.mapreduce.lib.output.FileOutputFormat;
 import org.apache.pig.Expression;
@@ -84,6 +85,7 @@ import org.apache.pig.parser.ParserException;
  * <li><code>-schema</code> Reads/Stores the schema of the relation using a 
  *  hidden JSON file.
  * <li><code>-noschema</code> Ignores a stored schema during loading.
+ * <li><code>-tagsource</code> Appends input source file path to end of each tuple. Make sure to set "pig.splitCombination" to false
  * </ul>
  * <p>
  * <h3>Schemas</h3>
@@ -98,6 +100,12 @@ import org.apache.pig.parser.ParserException;
  * In addition, using <code>-schema</code> drops a ".pig_headers" file in the output directory.
  * This file simply lists the delimited aliases. This is intended to make export to tools that can read
  * files with header lines easier (just cat the header to your data).
+ * <p>
+ * <h3>Source tagging</h3>
+ * If<code>-tagsource</code> is specified, PigStorage will prepend input split path to each Tuple/row.
+ * User needs to ensure <code>pig.splitCombination</code> is set to false. 
+ * Usage: A = LOAD 'input' using PigStorage(',','-tagschema'); B = foreach A generate INPUT_FILE_NAME;
+ * The first field in each Tuple will contain input path (INPUT_FILE_NAME)
  * <p>
  * Note that regardless of whether or not you store the schema, you <b>always</b> need to specify
  * the correct delimiter to read your data. If you store reading delimiter "#" and then load using
@@ -137,10 +145,16 @@ LoadPushDown, LoadMetadata, StoreMetadata {
 
     protected boolean[] mRequiredColumns = null;
     private boolean mRequiredColumnsInitialized = false;
+    
+    //Indicates whether the input file path should be read.
+    private boolean tagSource = false;
+    private static final String TAG_SOURCE_PATH = "tagsource";
+    private Path sourcePath = null;
 
     private void populateValidOptions() {
         validOptions.addOption("schema", false, "Loads / Stores the schema of the relation using a hidden JSON file.");
         validOptions.addOption("noschema", false, "Disable attempting to load data schema from the filesystem.");
+        validOptions.addOption(TAG_SOURCE_PATH, false, "Appends input source file path to end of each tuple. Make sure to set pig.splitCombination to false");
     }
 
     public PigStorage() {
@@ -166,6 +180,7 @@ LoadPushDown, LoadMetadata, StoreMetadata {
      * <ul>
      * <li><code>-schema</code> Loads / Stores the schema of the relation using a hidden JSON file.
      * <li><code>-noschema</code> Ignores a stored schema during loading.
+     * <li><code>-tagsource</code> Appends input source file path to end of each tuple. Make sure to set "pig.splitCombination" to false
      * </ul>
      * @param delimiter the single byte character that is used to separate fields.
      * @param options a list of options that can be used to modify PigStorage behavior
@@ -179,6 +194,7 @@ LoadPushDown, LoadMetadata, StoreMetadata {
             configuredOptions = parser.parse(validOptions, optsArr);
             isSchemaOn = configuredOptions.hasOption("schema");
             dontLoadSchema = configuredOptions.hasOption("noschema");
+            tagSource = configuredOptions.hasOption(TAG_SOURCE_PATH);
         } catch (ParseException e) {
             HelpFormatter formatter = new HelpFormatter();
             formatter.printHelp( "PigStorage(',', '[options]')", validOptions);
@@ -198,6 +214,11 @@ LoadPushDown, LoadMetadata, StoreMetadata {
             }
             mRequiredColumnsInitialized = true;
         }
+        //Prepend input source path if source tagging is enabled
+        if(tagSource) {
+        	mProtoTuple.add(new DataByteArray(sourcePath.getName()));
+        }
+
         try {
             boolean notDone = in.nextKeyValue();
             if (!notDone) {
@@ -343,6 +364,9 @@ LoadPushDown, LoadMetadata, StoreMetadata {
     @Override
     public void prepareToRead(RecordReader reader, PigSplit split) {
         in = reader;
+        if(tagSource) {
+        	sourcePath = ((FileSplit)split.getWrappedSplit()).getPath();
+        }
     }
 
     @Override
@@ -442,6 +466,9 @@ LoadPushDown, LoadMetadata, StoreMetadata {
             schema = (new JsonMetadata()).getSchema(location, job, isSchemaOn);
 
             if (signature != null && schema != null) {
+                if(tagSource) {
+                    schema = Utils.getSchemaWithInputSourceTag(schema);
+                }
                 Properties p = UDFContext.getUDFContext().getUDFProperties(this.getClass(),
                         new String[] {signature});
                 p.setProperty(signature + ".schema", schema.toString());
